tests/diagnostics/statements/control_flow/unreachable_after_break/expect.txt
# exit: 1
input/main.lang0:4:9: error: unreachable code
          return 1
          ^
